[project]
name = "osipi"
version = "0.1.2"
dependencies = [
    "numpy",
    "scipy",
    "mkdocs-minify-plugin (>=0.8.0,<0.9.0)"
]
description = "The authorative python package for perfusion MRI"
readme = "README.md"
requires-python = ">=3.6"


[project.urls]
Homepage = "https://osipi.github.io/pypi"


[tool.poetry]
name = "osipi"
version = "0.1.0"
description = "The authorative python package for perfusion MRI"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.2"
scipy = "^1.7.3"
matplotlib = "3.9.0"
requests = "^2.32.3"
semantic-version = "^2.10.0"
toml = "^0.10.2"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-gallery = "^0.10.1"
myst-parser = "^3.0.1"
mkdocs-material = { version = "^9.5.27", extras = ["imaging"] }
mkdocstrings = { version = "^0.26.0", extras = [ "crystal", "python"] }


[tool.setuptools.packages.find]
where = ["src"]